fix(components): fix label wrapping of SwirlShellNavigationItem

--- a/packages/swirl-components/src/components/swirl-shell-layout/swirl-shell-layout.css
+++ b/packages/swirl-components/src/components/swirl-shell-layout/swirl-shell-layout.css
@@ -87,8 +87,8 @@
   & .shell-layout__secondary-nav-items--grid-view {
     & ::slotted(ul > *) {
       max-width: 100%;
-      flex-basis: 100%;
       max-height: 3rem;
+      flex-basis: 100%;
     }
   }
 
@@ -412,14 +412,15 @@
 
 .shell-layout__secondary-nav-items--grid-view {
   & ::slotted(ul) {
-    flex-direction: row;
     flex-wrap: wrap;
+    flex-direction: row;
     gap: var(--s-space-16);
   }
 
   & ::slotted(ul > *) {
-    flex-basis: calc(50% - var(--s-space-8));
+    min-width: 0;
     max-height: none;
+    flex-basis: calc(50% - var(--s-space-8));
   }
 }
 
