--- a/packages/swirl-components/src/components/swirl-shell-navigation-item/swirl-shell-navigation-item.css
+++ b/packages/swirl-components/src/components/swirl-shell-navigation-item/swirl-shell-navigation-item.css
@@ -120,6 +120,7 @@
       text-align: start;
       white-space: normal;
       text-overflow: unset;
+      overflow-wrap: anywhere;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
     }
